# lojack-clients

./: .gitignore  LICENSE  README.md  pyproject.toml
client-generator/configs/: automotive.yaml  identity.yaml  maintenance.yaml  services.yaml
client-generator/templates/automotive/: client.py.jinja
client-generator/templates/identity/: client.py.jinja
client-generator/templates/maintenance/: client.py.jinja
client-generator/templates/services/: client.py.jinja
openapi/automotive/: openapi.yaml
openapi/identity/: openapi.yaml
openapi/maintenance/: openapi.yaml
openapi/services/: openapi.yaml
scripts/: build_api_clients
src/lojack_clients/automotive/: __init__.py  client.py
src/lojack_clients/automotive/models/: __init__.py  get_automotive_dealer_profile_response_200.py  get_automotive_dealer_profile_response_200_dealership_address.py  get_automotive_dealer_profile_response_200_vehicle_valuation.py
src/lojack_clients/identity/: __init__.py  client.py
src/lojack_clients/identity/models/: __init__.py  get_identity_token_response_200.py
src/lojack_clients/maintenance/: __init__.py  client.py
src/lojack_clients/maintenance/models/: __init__.py  get_maintenance_schedule_response_200.py  get_maintenance_schedule_response_200_content_item.py  get_maintenance_schedule_response_200_content_item_service_schedule_item.py  get_maintenance_schedule_response_200_content_item_service_schedule_item_service_items.py  get_repair_orders_response_200.py  get_repair_orders_response_200_content_item.py  (+1 more)
src/lojack_clients/services/: __init__.py  client.py
(+78 files in other folders)
